--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "qtum-opcodes",
+  "name": "runebase-opcodes",
   "version": "1.0.0",
-  "description": "The QTUM opcodes map",
+  "description": "The RUNEBASE opcodes map",
   "main": "./index.json",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qtumproject/qtum-opcodes-js.git"
+    "url": "git+https://github.com/runebase/runebase-opcodes-js.git"
   },
   "keywords": [
-    "qtum",
+    "runebase",
     "opcodes"
   ],
-  "author": "Qtum Weiyu",
+  "author": "Runebase Weiyu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/qtumproject/qtum-opcodes-js/issues"
+    "url": "https://github.com/runebase/runebase-opcodes-js/issues"
   },
-  "homepage": "https://github.com/qtumproject/qtum-opcodes-js#readme"
+  "homepage": "https://github.com/runebase/runebase-opcodes-js#readme"
 }
